# find-tools

./: .gitignore  Makefile  README.md
keytools/: policy.md  tools.json
rectools/: policy.md  tools.json
sdk-py/: pyproject.toml
sdk-py/src/: __init__.py  find_tools_local.py  find_tools_remote.py
sdk-py/test/: test_find_tools_local.py  test_find_tools_remote.py  test_tools_json.py
sdk-ts/: package-lock.json  package.json  tsconfig.json
sdk-ts/src/: find_tools_local.ts  find_tools_remote.ts
sdk-ts/test/: test_find_tools_local.ts  test_find_tools_remote.ts  test_tools_json.ts
