[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rectools"
version = "0.1.0"
description = "Tool recommendation SDK for AI agents"
readme = "../../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "mcp", "recommendations", "monetization"]

[project.urls]
Repository = "https://github.com/konevc/mcp_dev"

[tool.setuptools.packages.find]
where = ["src"]
